# fight

./: .env  .envrc  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  shell.sh
.cargo/: config.toml
client/: Cargo.toml
client/assets/: celeste.yaml
client/assets/framedata/: postbox.yaml
client/headless/: Cargo.toml
client/headless/src/: app.rs  main.rs
client/src/: action.rs  characteristics.rs  death.rs  graphics.rs  hud.rs  input.rs  intent.rs  machine.rs  main.rs  physics.rs  physics2.rs  stance.rs  state.rs  types.rs  world.rs
client/src/characteristics/: README.md  evil_postbox.rs  postbox.rs
client/src/machine/: README.md  common.rs  environment.rs  grounded.rs  postbox.rs  types.rs
client/src/machine/environment/: types.rs
client/src/machine/grounded/: types.rs
client/src/machines/: postbox.rs
client/src/state/: jumping.rs  mod.rs  punching.rs  standing.rs  types.rs
client/src/state/events/: mod.rs
common/: Cargo.toml
common/src/: input.rs  lib.rs
db/: sqitch.conf  sqitch.plan
db/deploy/: appschema.sql  game_player.sql  games.sql  users.sql
db/revert/: appschema.sql  game_player.sql  games.sql  users.sql
db/verify/: appschema.sql  game_player.sql  games.sql  users.sql
headless/: Cargo.toml
server/: Cargo.toml
server/src/: app.rs  db.rs  handler.rs  main.rs  test.rs
server/src/db/: common.rs  game.rs  game_player.rs  user.rs
server/src/db/game/: cancel.sql  get.sql  get_lobbied.sql  new.sql
server/src/db/game_player/: cancel_if_zero_players.sql  get_players.sql  join.sql  leave.sql
server/src/db/user/: new.sql
server/src/handler/: cancel_game.rs  get_lobbied_games.rs  join_game.rs  new_lobbied_game.rs
