[package]
name = "fight-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.1", features = ["dynamic_linking"] }
bevy_asset_loader = "0.17.0"
bevy_fmod = { path = "../../bevy_fmod/crate" }
bevy_ggrs = "0.13.0"
bytemuck = "1.13.1"
ggrs = "0.9.4"
serde = "1.0.183"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
